css/main.css
/* reset */

* {
	margin: 0;
	padding: 0;
}

html, body {
	height: 100%;
	width: 100%;
	overflow: hidden;
}

/* some useful classes */

.clear {
	clear: both;
}

.dialog {
	/* dialogs are hidden by default. To show them, the class visible must be added */
	display: none;
	/* centering dialogs horizontally */
	margin: auto;
}

.dialog.visible {
	display: block;
}

.dialog .closeDialog {
	/* Automatically place a close button in the top-right corner and set the background-image */
	float: right;
	height: 16px;
	width: 16px;
}

.button {
    display: block;
    margin: 4px;
    padding: 6px;
}

/* main part */

/* The main navigation bar (with options like opening and creating databases, ...) */
#mainNav {
	margin-bottom: 10px;
}

#mainNav > ul > li {
	float: left;
	list-style-type: none;
	padding: 8px;
}

/* The navigation bar at the right side, where modes can be selected */

#modeNav {
	width: 80px;
	position: absolute;
	top: 60px;
	right: 0;
	width: 20px;
	overflow-x: hidden;
	-webkit-transition: width 0.3s ease; 
	-moz-transition: width 0.3s ease; 
	-o-transition: width 0.3s ease;
	transition: width 0.3s ease;
	z-index: 100;
}

#modeNav > ul > li {
	list-style-type: none;
	width: 80px;
	padding: 8px;
	margin: 8px;
}

#modeNav:hover {
	width: 100px;
	-webkit-transition: width 0.3s ease; 
	-moz-transition: width 0.3s ease; 
	-o-transition: width 0.3s ease;
	transition: width 0.3s ease; 
}

#openDatabaseDialog-databaseList > li {
    list-style-type: none;
}

#chessboardWrapper {
	float: left;
}

#windows {
	float: right;
	margin: 10px 20px 0 0;
}

